<resources>
    <string name="app_name">Internet Shop</string>
    <string name="user_name">Name</string>
    <string name="user_phone_number">Phone number</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="register">Sign Up</string>
    <string name="registration">Registration</string>
    <string name="sign_in">Sign In</string>
    <string name="signing_in">Sign In</string>
    <string name="or">or</string>
    <string name="wrong_phone_number_format">Wrong phone format</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="empty_name">Enter Your name</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="password_no_digit">Password must contain a number</string>
    <string name="password_no_upper_case">Password must contain an uppercase character</string>
    <string name="password_no_lower_case">Password must contain an lowercase character</string>
    <string name="password_no_special_character">Password must contain a special character</string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="email_in_DB">This email is already registered</string>
    <string name="email_not_in_DB">This email is not registered</string>
    <string name="currency">₽</string>
    <string name="price">Price</string>
    <string name="filter_none">…</string>
    <string name="filter_price_asc">Price (asc.)</string>
    <string name="filter_price_desc">Price (desc.)</string>
    <string name="filter_price_alph_order">Name (A-Z)</string>
    <string name="filter_price_reverse_alph_order">Name (Z-A)</string>
    <string name="empty_search">Empty. Try resetting filters</string>
    <string name="user_exists">This email already in use</string>
    <string name="phone_exists">This phone number already in use</string>
    <string name="registration_general">Error in registration process</string>
    <string name="greetings">Welcome</string>
    <string name="wrong_data">Wrong email or password</string>
    <string name="signing_in_general">Error in signing in process</string>
    <string name="signing_out_general">Error in signing out process</string>
    <string name="sign_out">Sign out of account</string>
    <string name="brand">Brand</string>
    <string name="info_about_order">Information about order №</string>
    <string name="registration_date">Date of order</string>
    <string name="payment_variant">Payment variant</string>
    <string name="order_status">Order status</string>
    <string name="total_price">Total cost</string>
    <string name="ordered_items">Ordered items</string>
    <string name="empty_cart">Cart is empty</string>
    <string name="choose_payment_variant">Select a payment method</string>
    <string name="payment_not_chosen">…</string>
    <string name="payment_card_online">Card online</string>
    <string name="payment_card_upon_receipt">Card upon receipt</string>
    <string name="payment_cash">Cash</string>
    <string name="payment_FPS">FPS</string>
    <string name="payment_crypto">Crypto</string>
    <string name="loading">Loading orders data</string>
    <string name="loading_cart">Loading cart data</string>
    <string name="loading_catalogue">Loading products data</string>
    <string name="empty_orders">You have not made any orders</string>
    <string name="confirm_order">Place an order</string>
    <string name="order_status_in_processing">In processing</string>
    <string name="order_status_confirmed">Confirmed</string>
    <string name="order_status_is_being_collected">Is being collected</string>
    <string name="order_status_ready_for_shipment">Ready for shipment</string>
    <string name="order_status_shipped">Shipped</string>
    <string name="order_status_with_the_courier">With the courier</string>
    <string name="order_status_delivered">Delivered</string>
    <string name="order_status_canceled">Canceled</string>
    <string name="order_status_refund">Refund</string>
    <string name="order_status_at_the_pick_up_point">At the pick up point</string>
    <string name="search">Search</string>
    <string name="successful_order_creation">Order was successfully created</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="error_add_to_cart">Failed getting product to cart</string>
    <string name="error_remove_from_cart">Failed removing product from cart</string>
    <string name="error_get_cart_items">Failed getting user cart items</string>
    <string name="error_create_new_order">Failed creating new order</string>
    <string name="error_get_user_id">Failed getting current user information</string>
    <string name="error_cart_general">Error in cart work</string>
    <string name="error_get_all_products">Failed getting products</string>
    <string name="error_catalogue_general">Error in catalogue work</string>
    <string name="error_get_all_orders">Failed getting all user orders</string>
    <string name="error_orders_general">Error while working with user orders</string>
    <string name="error_sign_out">Error signing out of account</string>
    <string name="error_settings_general">Error in settings work</string>
    <string name="piece">pc.</string>
    <string name="loading_btn">Loading…</string>
</resources>