<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <TextView
            android:id="@+id/textViewRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily=""
            android:text="@string/registration"
            android:textAlignment="center"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_name"
            android:autofillHints="name"
            android:inputType="text"
            android:minWidth="250dp"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_phone_number"
            android:autofillHints="phone"
            android:inputType="phone"
            android:minWidth="250dp"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_email"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:minWidth="250dp"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="205dp"
            android:ems="10"
            android:hint="@string/user_password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:minWidth="250dp"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/buttonRegistration"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/register" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>