<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:text="@string/sign_out"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:id="@+id/btnLogout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/montserrat_regular"
            android:background="@drawable/background_rounded_full"
            android:textSize="20sp"
            />

    <TextView
            android:text="@string/greetings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginTop="6dp"
            android:textSize="30sp"
            android:id="@+id/tvGreetings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/montserrat_regular" />

    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/tvGreetings"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="18sp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="6dp"/>

    <TextView
            android:text="@string/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="18sp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="6dp"/>

    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmailValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGreetings"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="18sp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"/>

    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPhoneValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmailValue"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="18sp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>