<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
            android:text="@string/confirm_order"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="0dp"
            android:id="@+id/imageBtnMakeOrder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginStart="6dp"
            android:background="@drawable/background_rounded_full"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="20sp" />

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/rvCart"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvTotalCost" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTotalCost"
            app:layout_constraintBottom_toTopOf="@+id/tvChoosePaymentVariant"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="6dp"
            android:textSize="16sp"
            android:textAlignment="textStart"
            android:text="@string/total_price"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginBottom="6dp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp"
            android:textSize="16sp"
            android:text="@string/empty_cart"
            android:textAlignment="center"
            android:visibility="gone"
            android:id="@+id/tvEmptyCart"
            android:fontFamily="@font/montserrat_regular"/>

    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTotalCostValue"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/spinner2"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginBottom="6dp"/>

    <Spinner
            android:textAlignment="viewEnd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinner2"
            app:layout_constraintStart_toEndOf="@+id/tvChoosePaymentVariant"
            android:layout_marginStart="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="0dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toTopOf="@+id/imageBtnMakeOrder"
            android:layout_marginEnd="6dp"
            android:background="@drawable/background_rounded_full" />

    <TextView
            android:text="@string/choose_payment_variant"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/tvChoosePaymentVariant"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/spinner2"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/montserrat_regular"
            app:layout_constraintTop_toTopOf="@+id/spinner2" />

    <TextView
            android:text="@string/loading_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            android:visibility="gone"
            android:fontFamily="@font/montserrat_regular"/>
</androidx.constraintlayout.widget.ConstraintLayout>