<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_about_order"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/tvOrderTitle"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:fontFamily="@font/montserrat_regular"/>

            <TextView
                    android:text="@string/registration_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvRegistrationDateHolder"
                    app:layout_constraintTop_toBottomOf="@+id/tvOrderTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="6dp"
                    android:layout_marginStart="6dp"
                    android:fontFamily="@font/montserrat_regular" />

            <TextView
                    android:text="@string/payment_variant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPaymentVariantHolder"
                    app:layout_constraintTop_toBottomOf="@+id/tvRegistrationDateHolder"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="6dp"
                    android:layout_marginStart="6dp"
                    android:fontFamily="@font/montserrat_regular"/>

            <TextView
                    android:text="@string/order_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvOrderStatusHolder"
                    app:layout_constraintTop_toBottomOf="@+id/tvPaymentVariantHolder"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="6dp"
                    android:layout_marginStart="6dp"
                    android:fontFamily="@font/montserrat_regular"/>

            <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDateOfOrderValue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvOrderTitle"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="6dp"
                    android:fontFamily="@font/montserrat_regular"/>

            <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPaymentVariantValue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDateOfOrderValue"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="6dp"
                    android:fontFamily="@font/montserrat_regular"/>

            <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvOrderStatusValue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPaymentVariantValue"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="6dp"
                    android:fontFamily="@font/montserrat_regular"/>

            <TextView
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvOrderedItems"
                    app:layout_constraintTop_toBottomOf="@+id/textView9"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="6dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:textSize="14sp"
                    android:fontFamily="@font/montserrat_regular"
                    />

            <TextView
                    android:text="@string/ordered_items"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/tvOrderStatusHolder"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="6dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:fontFamily="@font/montserrat_regular"/>

            <TextView
                    android:text="@string/total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTotalPriceHolder"
                    app:layout_constraintTop_toBottomOf="@+id/tvOrderedItems"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:layout_marginStart="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:fontFamily="@font/montserrat_regular"/>

            <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTotalPriceValue"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="6dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvOrderedItems"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:fontFamily="@font/montserrat_regular"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>